syntax = "proto3";
package inference.inference;

option go_package = "github.com/productscience/inference/x/inference/types";

message UnitOfComputePriceProposal {
  string participant = 1;
  uint64 price = 2;
  uint64 proposedAtBlockHeight = 3;
  uint64 proposedAtEpoch = 4;
}

message UnitOfComputePrice {
  uint64 price = 1;
  uint64 epochId = 2;
}
